--- a/html_contents/ass1.html
+++ b/html_contents/ass1.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Hey, my name is pooja singh</h1>
-    <img src="img.jpeg" alt="my_pic" width="300" height="400" />
+    <img src="../img.jpeg" alt="my_pic" width="300" height="400" />
     <p>
       Hi, I’m <b>Pooja Singh!</b> 😊 My journey began in the medical field where
       I worked as a <em>lab technician</em> in a blood bank 🧪💉. However, I
