--- a/html_contents/ass5.html
+++ b/html_contents/ass5.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>my image and video content </h1>
-    <img src="img.jpeg" width="300" height="400" alt="my_pic">
-    <video src="video.mp4" width="300" height="200" ></video>
+    <img src="../img.jpeg" height="400" alt="my_pic">
+    <video src="../video.mp4" height="400" controls ></video>
 </body>
 </html>
