--- a/html_contents/ass3.html
+++ b/html_contents/ass3.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>chemistry Assignment</title>
 </head>
 <body>
     <h1>Chemistry Assignment</h1>
     <p>Chemistry is the branch of science that deals with the properties, composition, and behavior of matter. It is a fascinating field that explores the building blocks of the universe.</p>
     <h2>
 Chemical Elements</h2>
-<p>The <dfn>periodic table</dfn> is a tabular arrangement of chemical elements. Each element is represented by its chemical symbol, such as Fe for iron, H for hydrogen, and O for oxygen. Elements are classified into groups and periods based on their properties.
+<p>The <mark> periodic table</mark> is a tabular arrangement of chemical elements. Each element is represented by its chemical symbol, such as Fe for iron, H for hydrogen, and O for oxygen. Elements are classified into groups and periods based on their properties.
 </p>
 <h3>
 Chemical Equations
@@ -20,7 +20,7 @@ Chemical Equations
 <p>
 This equation represents the reaction between hydrogen gas <b>( H<sub>2</sub> )</b> and oxygen gas <b>( O<sub>2</sub> )</b> to form water <b>( H<sub>2</sub>O )</b>.</p>
 <h4>Important Concepts</h4>
-<p><var>Stoichiometry</var> is the calculation of reactants and products in chemical reactions. It involves balancing chemical equations to ensure mass and charge are conserved.</p>
+<p><tt><b>Stoichiometry</b></tt> is the calculation of reactants and products in chemical reactions. It involves balancing chemical equations to ensure mass and charge are conserved.</p>
 <p><sub>Subscripts</sub> indicate the number of atoms of each element in a molecule, while <sup>superscripts</sup> represent charges or the number of atoms in an ion.</p>
 <h5>Conclusion</h5>
 <p>Chemistry plays a crucial role in understanding the world around us. From the composition of the air we breathe to the reactions that power our bodies, chemistry influences every aspect of our lives.</p>
